# cpp-studies

./: .gitignore
guessing-game/: CMakeLists.txt  main.cpp
hangman-game/: CMakeLists.txt  Makefile  app.cpp  app.hpp  file.cpp  file.h  file.hpp  hangman.cpp  hangman.h  hangman.hpp  main.cpp  out.cpp  out.h  out.hpp  words.txt
oop/: Autenticavel.cpp  Autenticavel.hpp  CMakeLists.txt  Caixa.cpp  Caixa.hpp  Conta.cpp  Conta.hpp  ContaCorrente.cpp  ContaCorrente.hpp  ContaPoupanca.cpp  ContaPoupanca.hpp  Cpf.cpp  Cpf.hpp  DiaSemana.hpp  Funcionario.cpp  Funcionario.hpp  Gerente.cpp  Gerente.hpp  Pessoa.cpp  Pessoa.hpp  Titular.cpp  Titular.hpp  main.cpp
oop/example/: classes-puras.cpp  constructor.cpp  heranca-multipla.cpp  multiple-returns.cpp
performance-and-optimization/: CMakeLists.txt  copy-constructor.cpp  move-semantics.cpp  smart-pointers.cpp  strings.cpp  value-types.cpp
tdd/: CMakeLists.txt
tdd/src/: Auction.cpp  Auction.hpp  Bid.cpp  Bid.hpp  Evaluator.cpp  Evaluator.hpp  User.cpp  User.hpp  main.cpp
tdd/tests/: auction-test.cpp  evaluator-test.cpp  user-test.cpp
